Added colors and created API

--- a/courseology-frontend/src/containers/Courses/Courses.scss
+++ b/courseology-frontend/src/containers/Courses/Courses.scss
@@ -1,4 +1,7 @@
+@use "../../styles/abstract/variables" as *;
+
 .main {
+  background-color: $color-white;
   &__courses {
     display: flex;
     justify-content: space-evenly;
